# hyprag

./: .gitignore  BENCHMARKS.md  Dockerfile  Hyperbolic Pincaré RAG middleware.docx  LICENSE  README.md  TEST_PROMPT.md  bootstrap.py  patch_chunker_and_queries.py  patch_chunker_richtext.py  patch_encoder.py  patch_trust_remote_code.py  pyproject.toml
.github/workflows/: publish.yml
api/: __init__.py  auth.py  main.py  store.py
benchmarks/: HypRAG_Colab_Benchmark.ipynb  __init__.py  compare_chunkers.py  compare_expansion.py  gdpr_queries.py  generate_summaries.py  queries.py  run_benchmark.py  run_legal_comparison.py  specificity_ablation.py
benchmarks/results/: BENCHMARKS.md  semantic.json  structural.json
src/hyprag/: __init__.py  bm25.py  chunker.py  faiss_index.py  hybrid.py  index.py  retriever.py  sources.py  specificity.py  summarize.py
src/hyprag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hyprag/chunkers/: __init__.py  html_generic.py  legal.py  markdown.py  pdf.py  text.py
tests/: test_html_chunker.py  test_markdown_chunker.py  test_pdf_chunker.py  test_poincare.py  test_retriever.py  test_sources.py
