[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprag"
version = "0.5.0"
description = "Hierarchical RAG: FAISS retrieval + subtree expansion over a parent/child chunk hierarchy."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["embeddings", "retrieval", "rag", "faiss", "hierarchy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy", "httpx"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "psutil>=5.9"]
bench = ["psutil>=5.9"]
legal = ["beautifulsoup4>=4.12", "lxml>=5.0", "requests>=2.31"]
summarize = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/wetzy/hyprag"
Repository = "https://github.com/wetzy/hyprag"
Issues = "https://github.com/wetzy/hyprag/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src-layout: make ``import hyprag`` resolve to this checkout's ``src/``
# rather than any system-installed copy. Required for tests to pick up
# changes without ``pip install -e .`` first.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
